# AutoOrganizer

./: .coverage  .gitignore  CHANGELOG.md  PHASE3_PLAN.md  README.md  Read me.md  TODO.md  WATCHER.md  init_codex_prompt.md  pyproject.toml  🤖 AutoOrganizer - 詳細系統設計文檔.md
README.md/: AutoOrganizer_系統規格書_v2.md
auto_organizer/: __init__.py  __main__.py  classifier.py  cli.py  config.py  dedup_index.py  file_mover.py  file_scanner.py  filters.py  logger.py  models.py  mover.py  organizer.py  planner.py  realtime_watcher.py  report.py  reporter.py  reporting.py  reports.py  rollback.py  rules.py  rules.schema.json  scanner.py  scheduler.py  system_filter.py
auto_organizer/tests/: test_classifier.py  test_cli.py  test_cli_integration.py  test_dedup.py  test_file_mover.py  test_file_scanner.py  test_logger.py  test_planner.py  test_realtime_watcher.py  test_report.py  test_rollback.py  test_rules.py  test_scheduler.py  test_system_filter.py  test_watcher_dryrun.py  test_watcher_event_queue.py
auto_organizer/utils/: __init__.py  fs.py
auto_organizer/watcher/: __init__.py  dryrun.py  event_queue.py  types.py
docs/: ARCHITECTURE.md
examples/: plan.json  report.json  report.txt  rollback.json
reports/: dedup_report.json  dedup_report.txt
tests/: test_auto_organizer.py
